<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2016 Bas van den Boom 'Z3r0byte'
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_ad"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.z3r0byte.magis.AdActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/Toolbar"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        app:theme="@style/ToolBarStyle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <Button
            android:text="@string/button_do_nothing"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button2"
            android:layout_weight="0.33" />

        <Button
            android:text="@string/button_donate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:id="@+id/button3" />

        <Button
            android:text="@string/button_watch_ad"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:id="@+id/button" />
    </LinearLayout>

    <TextView
        android:text="@string/msg_sponsor_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:padding="16dp"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="27dp" />

    <TextView
        android:text="@string/msg_sponsor_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="25dp"
        android:id="@+id/textView2"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:layout_below="@+id/Toolbar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
