<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2016 Bas van den Boom 'Z3r0byte'
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.toolbar.MainActivity">

    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_add"
        android:title="@string/menu_add_appointment"
        app:showAsAction="always"
        android:orderInCategory="3" />

    <item
        android:id="@+id/action_date"
        android:icon="@drawable/ic_date"
        android:orderInCategory="2"
        android:title="@string/menu_choose_date"
        app:showAsAction="always" />

    <item
        android:title="@string/menu_to_today"
        android:orderInCategory="1"
        app:showAsAction="always"
        android:id="@+id/action_today"
        android:icon="@drawable/ic_today" />

</menu>