<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2016 Bas van den Boom 'Z3r0byte'
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="false"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/msg_search_school"
        android:textColor="#fff"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <EditText
        android:id="@+id/edit_text_search_school"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="#fff"
        android:singleLine="true"
        android:hint="@string/hint_search_school" />


    <Button
        android:id="@+id/button_search_school"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/msg_search"
        android:theme="@style/AppThemeDark" />

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/mi_pager_margin_bottom" />

    <ListView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/list_schools"
        android:layout_marginTop="20dp"
        style="@style/AppThemeDark" />

</LinearLayout>