<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2016 Bas van den Boom 'Z3r0byte'
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:wheel="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary"
    tools:context="com.z3r0byte.magis.ReLogin">

    <ImageView
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:src="@drawable/magis512"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="72dp"
        android:id="@+id/imageView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/md_white_1000"
        android:text="@string/app_name"
        android:id="@+id/textView"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/imageView"
        android:layout_alignLeft="@+id/progress_wheel"
        android:layout_alignStart="@+id/progress_wheel" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/md_white_1000"
        android:text="@string/msg_logging_in"
        android:id="@+id/textView2"
        android:gravity="center"
        android:layout_marginTop="44dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/md_white_1000"
        android:text="@string/msg_login_progress_1"
        android:id="@+id/text_login_progress"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true" />

    <com.pnikosis.materialishprogress.ProgressWheel
        android:id="@+id/progress_wheel"
        android:layout_width="60dp"
        android:layout_height="60dp"
        wheel:matProg_barColor="@color/colorAccent"
        wheel:matProg_progressIndeterminate="true"
        android:layout_below="@+id/text_login_progress"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
